swagger document update
