# src/features/friends/friends.route.js
@@ -5,7 +5,7 @@ const friendRoute = Router();
 
 const controller = new friendController();
 
-friendRoute.get("/get-friends/:userld", controller.getFriends);
+friendRoute.get("/get-friends/:userid", controller.getFriends);
 friendRoute.get("/get-pending-requests", controller.getPendingRequests);
 friendRoute.post("/toggle-friendship/:friendId", controller.toggleFriendship);
 friendRoute.post("/response-to-request/:friendId", controller.responseToRequest);
